<resources>
    <string name="app_name">MinuteWork</string>
    <string name="binaural_beats">Binaural Beats</string>
    <string name="lo_fi">Lo-fi</string>
    <string name="nature">Nature</string>
    <string name="dark_academia">Dark Academia</string>
    <string name="classical">Classical</string>
    <string name="minuteworks">MinuteWorks</string>
    <string name="classical_music_button">classical_music_button</string>
    <string name="lofi_music_button">Lofi Music Button</string>
    <string name="nature_music_button">Nature Music Button</string>
    <string name="violin">violin</string>
    <string name="tree">tree</string>
    <string name="todo">TODO</string>
    <string name="binaural_music_button">binaural_music_button</string>
    <string name="the_title_of_the_app_where_it_says_minute_work">The title of the app where it says minute work</string>
    <string name="listening_to_classical_music">LISTENING TO CLASSICAL MUSIC</string>
    <string name="emptybutton">emptybutton</string>
    <string name="playbutton">playbutton</string>
    <string name="pictureofviolin">pictureofviolin</string>
    <string name="forwardbutton">forwardbutton</string>
    <string name="backwardbutton">backwardbutton</string>
    <string name="waveimage">waveimage</string>
    <string name="listening_to_nature">LISTENING TO NATURE</string>
    <string name="listening_to_lofi">LISTENING TO LOFI</string>
    <string name="listening_to_binaural_beats">LISTENING TO BINAURAL BEATS</string>
    <string name="pictureoftree">pictureoftree</string>
    <string name="pictureofbrain">pictureofbrain</string>
    <string name="pictureofheadphone">pictureofheadphone</string>
    <string name="choose_your_mood">Choose your mood!</string>
    <string name="you_start_strong_and_end_stronger">you start strong and end stronger</string>
    <string name="happy_emoji">happy emoji</string>
    <string name="neutral_emoji">neutral emoji</string>
    <string name="sad_emoji">sad emoji</string>
    <string name="angry_emoji">angry emoji</string>
    <string name="menu_dropdown">menu dropdown</string>
    <string name="emojidisplaypanel">emojidisplaypanel</string>
    <string name="start_strong">You start strong and end stronger!</string>
    <string name="encourgemen">encourgemen</string>
    <string name="nature_photos">Nature Photos</string>
    <string name="baby_animals">\n\n</string>
    <string name="affirmations" />
    <string name="corny_jokes">Corny Jokes</string>
</resources>