<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#716150"
    tools:context=".nature">

    <!-- big display of the image and the button -->

    <!-- big display of the image and the button -->

    <!-- text+wave -->
    <TextView
        android:id="@+id/listennature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="monospace"
        android:text="@string/listening_to_nature"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/wave4"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:contentDescription="@string/waveimage"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="@+id/listennature"
        app:layout_constraintStart_toStartOf="@+id/listennature"
        app:layout_constraintTop_toBottomOf="@+id/listennature"
        app:srcCompat="@drawable/baseline_graphic_eq_24" />
    <!-- text+wave -->

    <!-- forward+backward -->
    <ImageView
        android:id="@+id/forward4"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/playbutton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toEndOf="@+id/playbutton4"
        app:layout_constraintTop_toTopOf="@+id/playbutton4"
        app:layout_constraintVertical_bias="0.485"
        app:srcCompat="@drawable/baseline_skip_next_24"
        android:contentDescription="@string/forwardbutton"
        />
    <ImageView
        android:id="@+id/backward4"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/playbutton4"
        app:layout_constraintEnd_toStartOf="@+id/playbutton4"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/playbutton4"
        app:layout_constraintVertical_bias="0.485"
        app:srcCompat="@drawable/baseline_skip_previous_24"
        android:contentDescription="@string/backwardbutton"/>
    <!-- forward+backward -->

    <!-- play+seekbar -->

    <ImageView
        android:id="@+id/playbutton4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/playbutton"
        app:layout_constraintBottom_toTopOf="@+id/seekBar4"
        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="@+id/imageButton2"
        app:srcCompat="@drawable/baseline_play_circle_24" />

    <SeekBar
        android:id="@+id/seekBar4"
        android:layout_width="330dp"
        android:layout_height="20dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/black"
        android:progress="40"
        android:progressTint="@color/white"
        android:thumbTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toTopOf="@+id/playbutton4"
        app:layout_constraintEnd_toEndOf="@+id/listennature"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/listennature"
        app:srcCompat="@drawable/button_background" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="280dp"
        android:layout_height="280dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="@+id/imageButton2"
        app:srcCompat="@drawable/tree_icon" />

    <TextView
        android:id="@+id/timeStampleft4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="00:00"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/seekBar4" />

    <TextView
        android:id="@+id/timeStampright4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="00:00"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/seekBar4" />
    <!-- play+seekbar -->


</androidx.constraintlayout.widget.ConstraintLayout>