<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#716150"
    tools:context=".lofi">
    <!-- big display of the image and the button -->
    <!-- big display of the image and the button -->

    <!-- text+wave -->

    <TextView
        android:id="@+id/listenlofi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="monospace"
        android:text="@string/listening_to_lofi"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- text+wave -->

    <!-- forward+backward -->

    <!-- forward+backward -->

    <!-- play+seekbar -->

    <ImageView
        android:id="@+id/wave3"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:contentDescription="@string/waveimage"
        app:layout_constraintBottom_toTopOf="@+id/bigdisplay"
        app:layout_constraintEnd_toEndOf="@+id/listenlofi"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/listenlofi"
        app:layout_constraintTop_toBottomOf="@+id/listenlofi"
        app:srcCompat="@drawable/baseline_graphic_eq_24" />

    <ImageView
        android:id="@+id/playbutton3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/playbutton"
        app:layout_constraintBottom_toTopOf="@+id/seekBar3"
        app:layout_constraintEnd_toEndOf="@+id/bigdisplay"
        app:layout_constraintStart_toStartOf="@+id/bigdisplay"
        app:srcCompat="@drawable/baseline_play_circle_24" />

    <ImageView
        android:id="@+id/backward3"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@string/backwardbutton"
        app:layout_constraintBottom_toBottomOf="@+id/playbutton3"
        app:layout_constraintEnd_toStartOf="@+id/playbutton3"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/playbutton3"
        app:layout_constraintVertical_bias="0.485"
        app:srcCompat="@drawable/baseline_skip_previous_24" />

    <ImageView
        android:id="@+id/forward3"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@string/forwardbutton"
        app:layout_constraintBottom_toBottomOf="@+id/playbutton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playbutton3"
        app:layout_constraintTop_toTopOf="@+id/playbutton3"
        app:layout_constraintVertical_bias="0.485"
        app:srcCompat="@drawable/baseline_skip_next_24" />

    <SeekBar
        android:id="@+id/seekBar3"
        android:layout_width="330dp"
        android:layout_height="20dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/black"
        android:progress="40"
        android:progressTint="@color/white"
        android:thumbTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/bigdisplay"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toTopOf="@+id/playbutton3"
        app:layout_constraintEnd_toEndOf="@+id/listenlofi"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/listenlofi"
        app:srcCompat="@drawable/button_background" />

    <ImageView
        android:id="@+id/bigheadphone"
        android:layout_width="280dp"
        android:layout_height="280dp"
        app:layout_constraintBottom_toBottomOf="@+id/bigdisplay"
        app:layout_constraintEnd_toEndOf="@+id/bigdisplay"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="@+id/bigdisplay"
        app:layout_constraintTop_toTopOf="@+id/bigdisplay"
        app:srcCompat="@drawable/headphones" />

    <TextView
        android:id="@+id/timeStampleft3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="00:00"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/seekBar3" />

    <TextView
        android:id="@+id/timeStampright3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="00:00"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/seekBar3" />
    <!-- play+seekbar -->

</androidx.constraintlayout.widget.ConstraintLayout>