<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#716150"
    tools:context=".classical">

    <!-- big display of the image and the button -->

    <ImageView
        android:id="@+id/playbutton1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/playbutton"
        android:src="@drawable/baseline_play_circle_24"
        app:layout_constraintBottom_toTopOf="@+id/seekBar1"
        app:layout_constraintEnd_toEndOf="@+id/bigdisplay"
        app:layout_constraintStart_toStartOf="@+id/bigdisplay" />

    <ImageView
        android:id="@+id/backward1"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@string/backwardbutton"
        app:layout_constraintBottom_toBottomOf="@+id/playbutton1"
        app:layout_constraintEnd_toStartOf="@+id/playbutton1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/playbutton1"
        app:srcCompat="@drawable/baseline_skip_previous_24" />

    <ImageView
        android:id="@+id/forward1"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@string/forwardbutton"
        app:layout_constraintBottom_toBottomOf="@+id/playbutton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playbutton1"
        app:layout_constraintTop_toTopOf="@+id/playbutton1"
        app:srcCompat="@drawable/baseline_skip_next_24" />

    <!-- big display of the image and the button -->

    <!-- text+wave -->

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="330dp"
        android:layout_height="20dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/black"
        android:progress="40"
        android:progressTint="@color/white"
        android:thumbTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/listenclassical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="monospace"
        android:text="@string/listening_to_classical_music"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/wave1"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/waveimage"
        app:layout_constraintBottom_toTopOf="@+id/bigdisplay"
        app:layout_constraintEnd_toEndOf="@+id/listenclassical"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/listenclassical"
        app:layout_constraintTop_toBottomOf="@+id/listenclassical"
        app:srcCompat="@drawable/baseline_graphic_eq_24" />

    <ImageButton
        android:id="@+id/bigdisplay"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toTopOf="@+id/playbutton1"
        app:layout_constraintEnd_toEndOf="@+id/listenclassical"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/listenclassical"
        app:srcCompat="@drawable/button_background" />

    <ImageView
        android:id="@+id/bigviolin"
        android:layout_width="280dp"
        android:layout_height="280dp"
        app:layout_constraintBottom_toBottomOf="@+id/bigdisplay"
        app:layout_constraintEnd_toEndOf="@+id/bigdisplay"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/bigdisplay"
        app:layout_constraintTop_toTopOf="@+id/bigdisplay"
        app:srcCompat="@drawable/violin_icon" />

    <TextView
        android:id="@+id/timeStampleft1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="00:00"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/seekBar1" />

    <TextView
        android:id="@+id/timeStampright1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:fontFamily="sans-serif"
        android:text="00:00"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/seekBar1" />

    <!-- text+wave -->

    <!-- forward+backward -->
    <!-- forward+backward -->

    <!-- play+seekbar -->

    <!-- play+seekbar -->
</androidx.constraintlayout.widget.ConstraintLayout>